[package]
name = "sf-wasm-app"
version = "0.1.0"
edition = "2021"

[features]
default = ["gif"]
gif = ["simula_video/gif"]
webp = ["simula_video/webp"]
gst = ["simula_video/gst"]
video = ["simula_video/video"]

[dependencies]
bevy = { version = "0.10.1" }
bevy-inspector-egui = "0.18.0"
bevy_egui = "0.20.0"
# wgpu-types = "0.15.1"

simula_core = { git = "https://github.com/Simbotic/simula.git", rev = "9cfcfa1602d35a1890cadced86fef728c85b07a9" }
simula_camera = { git = "https://github.com/Simbotic/simula.git", rev = "9cfcfa1602d35a1890cadced86fef728c85b07a9" }
simula_viz = { git = "https://github.com/Simbotic/simula.git", rev = "9cfcfa1602d35a1890cadced86fef728c85b07a9" }
simula_action = { git = "https://github.com/Simbotic/simula.git", rev = "9cfcfa1602d35a1890cadced86fef728c85b07a9" }
simula_video = { git = "https://github.com/Simbotic/simula.git", rev = "9cfcfa1602d35a1890cadced86fef728c85b07a9" }

sugarfunge-api-types = { git = "https://github.com/SugarFunge/sugarfunge-api.git", branch = "feature/polkadot-v0.9.42" }

tokio = { default-features = false, features = [
    "io-std",
    "io-util",
    "time",
    "rt-multi-thread",
], version = "1" }
reqwest = { version = "0.11", features = ["json"] }
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
enum-iterator = "1.4.1"
enum-display-derive = "0.1.1"
url = "2.3"

[dependencies.subxt]
git = "https://github.com/SugarFunge/subxt.git"
branch = "feature/polkadot-v0.9.42"
default-features = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
# lto = "thin"
